--- a/curseforge/Cargo.toml
+++ b/curseforge/Cargo.toml
@@ -10,3 +10,4 @@ reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
 serde_json = "1.0"
+clap = { version = "4.5.48", features = ["derive"] }
