--- a/curseforge/Cargo.toml
+++ b/curseforge/Cargo.toml
@@ -11,3 +11,4 @@ serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
 serde_json = "1.0"
 clap = { version = "4.5.48", features = ["derive"] }
+rustyline = "17"
