--- a/curseforge/Cargo.toml
+++ b/curseforge/Cargo.toml
@@ -12,3 +12,5 @@ tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
 serde_json = "1.0"
 clap = { version = "4.5.48", features = ["derive"] }
 rustyline = "17"
+urlencoding = "2.1.3"
+zip = "0.6"
