--- a/curseforge/Cargo.toml
+++ b/curseforge/Cargo.toml
@@ -14,3 +14,5 @@ clap = { version = "4.5.48", features = ["derive"] }
 rustyline = "17"
 urlencoding = "2.1.3"
 zip = "0.6"
+roxmltree = "0.20.0"
+once_cell = "1.21"
